frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body,
#root,
.app {
  height: 100%;
  width: 100%;
  @apply text-sm;
  @apply bg-white;
  @apply dark:bg-black;
}

/* TIMELINE STYLING */
.timeline ._3_ygE {
  @apply rounded-tl-md border border-r-0 border-[#e6e4e4] dark:border-stroke-dark;
}
.timeline ._2eZzQ {
  @apply border-[#e6e4e4] dark:border-stroke-dark;
}
.timeline ._2dZTy {
  @apply fill-white dark:fill-dark-secondary;
}
.timeline ._2dZTy:nth-child(even) {
  @apply fill-[#f5f5f5] dark:fill-dark-tertiary;
}
.timeline ._35nLX {
  @apply fill-white stroke-[#e6e4e4] dark:fill-dark-secondary dark:stroke-stroke-dark;
}
.timeline ._9w8d5 {
  @apply fill-[#333] dark:fill-white;
}
.timeline ._34SS0 {
  @apply bg-white dark:bg-dark-secondary;
}
.timeline ._34SS0:nth-of-type(even) {
  @apply bg-[#f5f5f5] dark:bg-dark-tertiary;
}
.timeline ._RuwuK,
.timeline ._3rUKi,
.timeline ._1rLuZ {
  @apply stroke-[#e6e4e4] dark:stroke-stroke-dark;
}
.timeline ._3ZbQT {
  @apply border-l-0 border-[#e6e4e4] dark:border-stroke-dark;
}
.timeline ._3T42e {
  @apply bg-white dark:bg-dark-bg;
}
.timeline ._29NTg {
  @apply dark:text-neutral-500;
}

::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

